--- a/.eslintrc
+++ b/.eslintrc
@@ -5,14 +5,24 @@
     "plugin:prettier/recommended"
   ],
   "plugins": ["react", "react-hooks", "prettier"],
-  "rules": {
-    "prettier/prettier": "error"
-  },
   "parser": "babel-eslint",
   "ignorePatterns": ["/node_modules/**", "build/**"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     }
+  },
+  "settings": {
+    "react": {
+      "version": "detect" // React version. "detect" automatically picks the version you have installed.
+      // You can also use `16.0`, `16.3`, etc, if you want to override the detected value.
+      // default to latest and warns if missing
+      // It will default to "detect" in the future
+    }
+  },
+  "rules": {
+    "quotes": [2, "single", { "avoidEscape": true }],
+    "semi": [2, "always"],
+    "prettier/prettier": ["error", { "singleQuote": true }]
   }
 }
